--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shaira Mae</title>
-  <link rel="stylesheet" href="css\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.ico">
   <!-- this is for font text, if the system of a device doesn't contain this font it will get the source from that link -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
